[gd_scene load_steps=2 format=3 uid="uid://dkdmsbw1ph825"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/scripts/CutsceneGraphEditor.gd" id="6"]

[node name="CutsceneGraphEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6")

[node name="MenuBar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MenuBar"]
layout_mode = 2
text = "Cutscene: "

[node name="CutsceneName" type="Label" parent="MenuBar"]
layout_mode = 2
text = "None"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="MarginContainer"]
layout_mode = 2
right_disconnects = true
show_zoom_label = true
arrange_nodes_button_hidden = true

[node name="GraphContextMenu" type="PopupMenu" parent="."]
theme_override_constants/v_separation = 10
item_count = 7
item_0/text = "Add Text Node"
item_0/id = 0
item_1/text = "Add Branch Node"
item_1/id = 1
item_2/text = "Add Choice Node"
item_2/id = 2
item_3/text = "Add Set Node"
item_3/id = 3
item_4/text = "Add Action Node"
item_4/id = 4
item_5/text = "Add Sub-Graph"
item_5/id = 5
item_6/text = "Add Random Node"
item_6/id = 6

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]

[node name="NodePopupMenu" type="PopupMenu" parent="."]
size = Vector2i(111, 44)
theme_override_constants/v_separation = 10
item_count = 1
item_0/text = "Set as root"
item_0/id = -1

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[connection signal="connection_request" from="MarginContainer/GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="delete_nodes_request" from="MarginContainer/GraphEdit" to="." method="_node_close_request"]
[connection signal="disconnection_request" from="MarginContainer/GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="end_node_move" from="MarginContainer/GraphEdit" to="." method="_on_graph_edit_end_node_move"]
[connection signal="scroll_offset_changed" from="MarginContainer/GraphEdit" to="." method="_on_graph_edit_scroll_offset_changed"]
